--- a/song.html
+++ b/song.html
@@ -7,7 +7,7 @@
         <!--Meta Closed-->
 
     <link rel="stylesheet" href="song.css">
-    <link rel="stylesheet" href="movie.css">
+    <link rel="stylesheet" href="style.css">
     <script src="movie.js"></script>
         <!-- =====BOX ICONS===== -->
     <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
